--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@strapi/plugin-users-permissions": "4.15.4",
     "@strapi/strapi": "4.15.4",
     "better-sqlite3": "8.6.0",
+    "pg": "^8.11.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-neon-tech-db-branches": "^0.1.18",
     "styled-components": "5.3.3"
   },
   "author": {
